--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>System-test</title>
-    <link rel="stylesheet" href="dist/css/main.css">
+    <link rel="stylesheet" type="text/css" href="dist/css/style.css">
 </head>
 <body>
     <div class="bg"></div>
@@ -14,7 +14,7 @@
         <header class="header">
             <div class="header__logo flex-center">
                 <a href="/" class="header__logo_link">
-                    <img src=".src/img/svg/logo.svg" alt="logo" class="header__logo_pict">
+                    <img src="./src/img/svg/logo.svg" alt="logo" class="header__logo_pict">
                 </a>
                 <div class="header__logo_title">Система комплексного мониторинга
                     состояния молочных коров</div>
@@ -29,7 +29,7 @@
             <div class="section-top__items-wrapper flex-between">
                 <div class="item item-1 flex">
                     <div class="item__logo">
-                        <img src="./img/svg/item-logo.svg" alt="item-logo" class="logo">
+                        <img src="./src/img/svg/item-logo.svg" alt="item-logo" class="logo">
                     </div>
                     <div class="item__content">
                         <span class="bold">Своевременного определения половой охоты</span><br>
@@ -38,7 +38,7 @@
                 </div>
                 <div class="item item-2 flex">
                     <div class="item__logo">
-                        <img src="./img/svg/item-logo.svg" alt="item-logo" class="logo">
+                        <img src="./src/img/svg/item-logo.svg" alt="item-logo" class="logo">
                     </div>
                     <div class="item__content">
                         <span class="bold">Анализом состояния здоровья коровы</span><br>
@@ -47,7 +47,7 @@
                 </div>
                 <div class="item item-3 flex">
                     <div class="item__logo">
-                        <img src="./img/svg/item-logo.svg" alt="item-logo" class="logo">
+                        <img src="./src/img/svg/item-logo.svg" alt="item-logo" class="logo">
                     </div>
                     <div class="item__content">
                         <span class="bold">Выявление хромоты</span><br>
@@ -79,7 +79,7 @@
                 <button type="submit" class="transition next flex-center">
                     <span class="next-txt">Далее</span>
                     <span class="next-icon">
-                        <img src="./img/png/icon-next.png" alt="next">
+                        <img src="./src/img/png/icon-next.png" alt="next">
                     </span>
                 </button>
             </div>
@@ -105,7 +105,7 @@
                 <button type="submit" class="transition next flex-center">
                     <span class="next-txt">Далее</span>
                     <span class="next-icon">
-                        <img src="./img/png/icon-next.png" alt="next">
+                        <img src="./src/img/png/icon-next.png" alt="next">
                     </span>
                 </button>
             </div>
@@ -144,7 +144,7 @@
                 <button type="submit" class="transition next flex-center">
                     <span class="next-txt">Далее</span>
                     <span class="next-icon">
-                        <img src="./img/png/icon-next.png" alt="next">
+                        <img src="./src/img/png/icon-next.png" alt="next">
                     </span>
                 </button>
             </div>
